--- a/keyedcache/templates/keyedcache/delete.html
+++ b/keyedcache/templates/keyedcache/delete.html
@@ -1,4 +1,4 @@
-{% extends "admin/base_site.html" %}{% load url from future %}
+{% extends "admin/base_site.html" %}
 {% load i18n %}
 
 {% block breadcrumbs %}{% if not is_popup %}
