--- a/keyedcache/templates/keyedcache/stats.html
+++ b/keyedcache/templates/keyedcache/stats.html
@@ -2,19 +2,20 @@
 {% load i18n %}
 
 {% block breadcrumbs %}{% if not is_popup %}
-<div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% trans "Home" %}</a> &rsaquo;
-    {% trans "Cache Stats" %}
-</div>
+    <div class="breadcrumbs">
+        <a href="{% url 'admin:index' %}">{% trans "Home" %}</a> &rsaquo;
+        {% trans "Cache Stats" %}
+    </div>
 {% endif %}{% endblock %}
 
 {% block content %}
-<p>[<a href="{% url 'keyedcache_view' %}">View Cache</a>] [<a href="{% url 'keyedcache_delete' %}">Delete from Cache</a>]
-<h1>Cache Stats</h1>
-<p>Backend: {{ cache_backend }} ({% if cache_running %}running{% else %}down{% endif %})</p>
-<p>Timeout: {{ cache_time }}</p>
-<p>Keys in cache: {{ cache_count }}</p>
-<p>Cache Calls: {{ cache_calls }}</p>
-<p>Cache Hits: {{ cache_hits }}</p>
-<p>Cache Hit Rate: {{ hit_rate }}%</p>
+    <p>[<a href="{% url 'keyedcache_view' %}">View Cache</a>] [<a href="{% url 'keyedcache_delete' %}">Delete from
+        Cache</a>]
+    <h1>Cache Stats</h1>
+    <p>Backend: {{ cache_backend }} ({% if cache_running %}running{% else %}down{% endif %})</p>
+    <p>Timeout: {{ cache_time }}</p>
+    <p>Keys in cache: {{ cache_count }}</p>
+    <p>Cache Calls: {{ cache_calls }}</p>
+    <p>Cache Hits: {{ cache_hits }}</p>
+    <p>Cache Hit Rate: {{ hit_rate }}%</p>
 {% endblock %}
