--- a/keyedcache/templates/keyedcache/view.html
+++ b/keyedcache/templates/keyedcache/view.html
@@ -2,16 +2,17 @@
 {% load i18n %}
 
 {% block breadcrumbs %}{% if not is_popup %}
-<div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% trans "Home" %}</a> &rsaquo;
-    <a href="{% url 'keyedcache_view' %}">{% trans "Cache" %}</a> &rsaquo;
-    {% trans "Cache View" %}
-</div>
+    <div class="breadcrumbs">
+        <a href="{% url 'admin:index' %}">{% trans "Home" %}</a> &rsaquo;
+        <a href="{% url 'keyedcache_view' %}">{% trans "Cache" %}</a> &rsaquo;
+        {% trans "Cache View" %}
+    </div>
 {% endif %}{% endblock %}
 
 {% block content %}
-<p>[<a href="{% url 'keyedcache_stats' %}">Cache Stats</a>] [<a href="{% url 'keyedcache_delete' %}">Delete from Cache</a>]
-<h1>Cache Keys</h1>
-<p style="font-size:82%;">{% for key in cached_keys %}{{ key }}, {% endfor %}
-</p>
+    <p>[<a href="{% url 'keyedcache_stats' %}">Cache Stats</a>] [<a href="{% url 'keyedcache_delete' %}">Delete from
+        Cache</a>]
+    <h1>Cache Keys</h1>
+    <p style="font-size:82%;">{% for key in cached_keys %}{{ key }}, {% endfor %}
+    </p>
 {% endblock %}
